Fix navbar z-index from #642.

--- a/less/essential/navigation.less
+++ b/less/essential/navigation.less
@@ -14,7 +14,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: @zindexFixedNavbar;
+  z-index: 200;
 }
 
 @media(min-width: @navbarCollapseDesktopWidth) {
@@ -33,7 +33,6 @@
   margin-bottom: 0px;
   width: 100%;
   background-image: none;
-  z-index: 200;
 
   .navbar-inner {
     .reset-filter();
